--- a/TaskManager/Views/Notifications/Index.cshtml
+++ b/TaskManager/Views/Notifications/Index.cshtml
@@ -1,44 +1,35 @@
-﻿@model List<NotificationModel>
+﻿@model IEnumerable<NotificationModel>
 
 @{
     ViewData["Title"] = "Оповещения";
 }
 
+<h1 class="page-heading text-uppercase mb-4">Ваши оповещения</h1>
+
 <div class="row">
-    <div class="col-md-8 offset-md-2">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Название</th>
-                    <th>Время/Дата отправки</th>
-                    <th>Просмотрено</th>
-                    <th>Действия</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.Title)
-                        </td>
-                        <td class="align-middle">
-                            <div>@item.CreationDate.ToLocalTime().ToString("HH:mm\\/dd.MM")</div>
-                        </td>
-                        <td class="align-middle">
-                            <input asp-for="@item.IsChecked" value="@item.IsChecked" disabled="disabled"/>
-                        </td>
-                        <td class="align-middle">
-                            <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id">Просмотреть </a>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-    <div class="text-white">
-        <a asp-action="DeleteChecked" class="btn btn-success">Удалить просмотренные</a>
-    </div>
+    @foreach (var item in Model)
+    {
+        <div class="element-entry">
+            <div class="element-entry-text">
+                <div class="task-text">
+                    @Html.DisplayFor(modelItem => item.Title)
+                </div>
+                <div class="user-info">
+                    <div>@item.CreationDate.ToLocalTime().ToString("HH:mm\\/dd.MM")</div>
+                </div>
+                <div class=user-info>
+                    <input asp-for="@item.IsChecked" value="@item.IsChecked" disabled="disabled"/>
+                </div>
+            </div>
+
+            <div class="element-entry-actions align-middle">
+                <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id">Просмотреть </a>
+            </div>
+        </div>
+    }
 </div>
 
+<div style="position: fixed; right: 30px; bottom: 30px;" class="text-white">
+    <a asp-action="DeleteChecked" class="btn btn-danger">Удалить просмотренные</a>
+</div>
 
