--- a/TaskManager/Views/Tasks/Create.cshtml
+++ b/TaskManager/Views/Tasks/Create.cshtml
@@ -1,55 +1,50 @@
-﻿@model TaskModel
+﻿@model TaskManager.ViewModels.TaskViewModel
 
 @{
-    ViewData["Title"] = "Create task";
+    ViewData["Title"] = "Создать задание";
 }
+
+<h1 class="page-heading text-uppercase mb-4">Создать задание</h1>
 
 <div class="row text">
     <div class="col-md-8 offset-2">
-        <p>
-            <h1>Add a new task</h1>
-        </p>
-        <div class="row text">
-            <div class="col-md-8 offset-2">
-                <form asp-action="Create">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                    <div class="form-group">
-                        <label asp-for="TaskName" class="control-label"></label>
-                        <input asp-for="TaskName" class="form-control"/>
-                        <span asp-validation-for="TaskName" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Description" class="control-label"></label>
-                        <input asp-for="Description" class="form-control"/>
-                        <span asp-validation-for="Description" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Notes" class="control-label"></label>
-                        <input asp-for="Notes" class="form-control"/>
-                        <span asp-validation-for="Notes" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="FinishDate" class="control-label"></label>
-                        <input asp-for="FinishDate" type="datetime-local" class="form-control"/>
-                        <span asp-validation-for="FinishDate" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        @Html.DropDownListFor(m => m.Category, ViewBag.Categories as SelectList)
-                        <span asp-validation-for="Category" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        @Html.DropDownListFor(m => m.Status, ViewBag.Statuses as SelectList)
-                        <span asp-validation-for="Status" class="text-danger"></span>
-                    </div>   
-                    
-                    <div class="form-group">
-                        <input type="submit" asp-action="Create" value="Create" class="btn btn-outline-success float-right"/>
-                        <a class="btn btn-outline-secondary" asp-action="Index">Show all</a>
-                    </div>
-
-                </form>
+            <div class="form-group mb-2">
+                <label asp-for="TaskName" class="control-label"></label>
+                <input asp-for="TaskName" class="form-control"/>
+                <span asp-validation-for="TaskName" class="text-danger"></span>
             </div>
-        </div>
+            <div class="form-group mb-2">
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control"/>
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-2">
+                <label asp-for="Notes" class="control-label"></label>
+                <input asp-for="Notes" class="form-control"/>
+                <span asp-validation-for="Notes" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-2">
+                <label asp-for="FinishDate" class="control-label"></label>
+                <input asp-for="FinishDate" type="datetime-local" class="form-control"/>
+                <span asp-validation-for="FinishDate" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-2">
+                @Html.DropDownListFor(m => m.Category, ViewBag.Categories as SelectList)
+                <span asp-validation-for="Category" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-2">
+                @Html.DropDownListFor(m => m.Status, ViewBag.Statuses as SelectList)
+                <span asp-validation-for="Status" class="text-danger"></span>
+            </div>   
+                    
+            <div class="form-group">
+                <input type="submit" asp-action="Create" value="Создать" class="btn btn-main float-right"/>
+                <a class="btn btn-main" asp-action="Index">Все задания</a>
+            </div>
+
+        </form>
     </div>
 </div>
