--- a/TaskManager/Views/Tasks/Details.cshtml
+++ b/TaskManager/Views/Tasks/Details.cshtml
@@ -1,8 +1,10 @@
 ﻿@model TaskModel
 
 @{
-    ViewData["Title"] = "Task details";
+    ViewData["Title"] = "Детали";
 }
+
+<h1 class="page-heading text-uppercase mb-4">Детали задания</h1>
 
 <div class="row justify-content-center detail-form">
     <div class="col-xl-8 col-lg-10 form-layout">
@@ -11,13 +13,14 @@
             <div class="row task-detail-row">
                 <div class="col-11 task-detail">
                     <div class="task-detail-text">
-                        <div>Creation date: @Model.CreatedDate.ToLocalTime().ToString("HH:mm dd.MM.yyyy")</div>
-                        <div>Finish date: @Model.FinishDate.ToLocalTime().ToString("HH:mm dd.MM.yyyy")</div>
-                        <div class="fw-bold mb-2 task-detail-task">Task: @Model.TaskName</div>
-                        <div class="mb-2 task-detail-author">Author: @Model.Author.FullName - @Model.Author.EmailAddress</div>
+                        <div>Дата создания: @Model.CreatedDate.ToLocalTime().ToString("HH:mm dd.MM.yyyy")</div>
+                        <div>Дата завершения: @Model.FinishDate.ToLocalTime().ToString("HH:mm dd.MM.yyyy")</div>
+                        <div class="fw-bold mb-2 task-detail-task">Задание: @Model.TaskName</div>
+                        <div class="mb-2 task-detail-author">Автор: @Model.Author.FullName - @Model.Author.EmailAddress</div>
+                        <div>Описание:</div>
                         <div class="mb-2">@Model.Description</div>
                         <div class="mb-2">
-                            Appointed users:
+                            Назначенные пользователи:
                             @if (ViewBag.AppointedUsers?.Count > 0)
                             {
                                 @foreach (var u in ViewBag.AppointedUsers)
@@ -30,27 +33,34 @@
                             else
                             {
                                 <div>
-                                    No appointed users
+                                    Нет назначенных пользователей
                                 </div>
                             }
                         </div>
                         <div class="task-entry-text-category">
                             <div>@Model.Category.CategoryName</div>
                         </div>
-                        <div>
-                            @Model.Notes
-                        </div>
+                        
+                        @if (Model.Notes != null)
+                        {
+                            <div>Примечания к заданию:</div>
+                            <div class="mb-2">
+                                @Model.Notes
+                            </div>
+                        }
 
                         @if (User.IsInRole("Manager"))
                         {
                             <div>
-                                <a class="btn btn-main text-uppercase" asp-route-id="@Model.Id" asp-action="Delete">Delete task</a>
-                                <a class="btn btn-main text-uppercase" asp-route-id="@Model.Id" asp-action="Edit">Edit task</a>
-                                <a class="btn btn-main text-uppercase" asp-route-id="@Model.Id" asp-action="AppointUsers">Appoint users</a>
-                                <a class="btn btn-main text-uppercase" asp-action="Index">Show all</a>
+                                <a class="btn btn-outline-primary" asp-route-id="@Model.Id" asp-action="AppointUsers">Назначить</a>
+                                <a class="btn btn-outline-primary" asp-route-id="@Model.Id" asp-action="Edit">Редактировать</a>
+                                <a class="btn btn-outline-primary" asp-route-id="@Model.Id" asp-action="Delete">Удалить</a>
                             </div>
                         }
                     </div>
+                </div>
+                <div class="col-1 close-button-section">
+                    <a class="btn btn-close" asp-action="Index"></a>
                 </div>
             </div>
         }
