--- a/TaskManager/Views/Users/Edit.cshtml
+++ b/TaskManager/Views/Users/Edit.cshtml
@@ -4,34 +4,31 @@
     ViewData["Title"] = "Редактировать информацию";
 }
 
+<h1 class="page-heading" text-uppercase mb-4>Редактировать профиль</h1>
+
 <div class="row text">
     <div class="col-md-8 offset-2">
-        <p>
-            <h1>Редактировать профиль</h1>
-        </p>
-        <div class="row text">
-            <div class="col-md-8 offset-2">
-                <form asp-action="Edit">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="col-md-8 offset-2">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                    <div class="form-group">
-                        <p>Вы редактируете: @Model.EmailAddress</p>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="FullName" class="control-label"></label>
-                        <input asp-for="FullName" class="form-control"/>
-                        <span asp-validation-for="FullName" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        @Html.DropDownListFor(m => m.Category, ViewBag.Categories as SelectList)
-                        <span asp-validation-for="Category" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" asp-action="Edit" value="Edit" class="btn btn-outline-success float-right"/>
-                        <a class="btn btn-outline-secondary" asp-action="Index" asp-route-id="@Model.EmailAddress">Show all</a>
-                    </div>
-                </form>
-            </div>
+                <div class="form-group mb-2">
+                    <p>Вы редактируете: @Model.EmailAddress</p>
+                </div>
+                <div class="form-group mb-2">
+                    <label asp-for="FullName" class="control-label"></label>
+                    <input asp-for="FullName" class="form-control"/>
+                    <span asp-validation-for="FullName" class="text-danger"></span>
+                </div>
+                <div class="form-group mb-2">
+                    @Html.DropDownListFor(m => m.Category, ViewBag.Categories as SelectList)
+                    <span asp-validation-for="Category" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" asp-action="Edit" value="Изменить" class="btn btn-main float-right"/>
+                    <a class="btn btn-main" asp-action="Index" asp-route-id="@Model.EmailAddress">Все пользователи</a>
+                </div>
+            </form>
         </div>
     </div>
 </div>
