before the author notification functionality

--- a/TaskManager/Views/Notifications/Index.cshtml
+++ b/TaskManager/Views/Notifications/Index.cshtml
@@ -23,7 +23,7 @@
             </div>
 
             <div class="element-entry-actions align-middle">
-                <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id">Просмотреть </a>
+                <a class="btn btn-outline-primary" asp-action="Details" asp-route-id="@item.Id">Просмотреть </a>
             </div>
         </div>
     }
