--- a/TaskManager/Views/Tasks/Edit.cshtml
+++ b/TaskManager/Views/Tasks/Edit.cshtml
@@ -1,14 +1,13 @@
 ﻿@model TaskManager.ViewModels.TaskViewModel
 
 @{
-    ViewData["Title"] = "Edit task";
+    ViewData["Title"] = "Редактировать задание";
 }
+
+<h1 class="page-heading text-uppercase mb-4">Изменить задание</h1>
 
 <div class="row text">
     <div class="col-md-8 offset-2">
-        <p>
-            <h1>Edit task</h1>
-        </p>
         <div class="row text">
             <div class="col-md-8 offset-2">
                 <form asp-action="Register">
@@ -44,8 +43,8 @@
                     </div>   
                     
                     <div class="form-group">
-                        <input type="submit" asp-action="Edit" value="Edit" class="btn btn-outline-success float-right"/>
-                        <a class="btn btn-outline-secondary" asp-action="Index">Show all</a>
+                        <input type="submit" asp-action="Edit" value="Изменить" class="btn btn-outline-success float-right"/>
+                        <a class="btn btn-outline-secondary" asp-action="Index">Вернуться</a>
                     </div>
 
                 </form>
